@@ -34,7 +34,7 @@ namespace  Obj_flags
 		protection = 9,
 		on_moving_barge = 10,	// ??Guessing.
 		okay_to_take = 11,	// Okay to take??
-		tremor = 12,		// ??Earthquake??
+		might = 12,		// Double strength, dext, intel.
 		cant_die = 14,		// Test flag in Monster_info.
 		dancing = 15,		// ??Not sure.
 		dont_render = 16,	// Completely invisible.
